# this-catplanet-does-not-exist

./: .gitignore  CLAUDE.md  Makefile  bot.py  pyproject.toml  tmp.ipynb
model/: generator.py  smooth_borders.py  train.ipynb  train.py  train_config.json  transform_to_planet.py  transfrom_to_planet.py
